# GaussianElimSolver

./: .gitignore  CMakeLists.txt  README.md  sampledata.txt
libsolver/: CMakeLists.txt  config.in
libsolver/inc/libsolver/: Fractional.h  Matrix.h  Solver.h  Util.h
libsolver/src/: Fractional.cpp  Matrix.cpp  Solver.cpp  Util.cpp
solvertests/: CMakeLists.txt  test_solve.cpp
solveutil/: CMakeLists.txt  config.input  main.cpp
